force-app/main/default/objects/FreeWithdraw__c/FreeWithdraw__c.object-meta.xml
<CustomObject>
    <label>Ritiro Gratuito</label>
    <nameField>
        <label>Nome Ritiro Gratuito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ritiri Gratuiti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>