force-app/main/default/objects/FreeWithdraw__c/fields/LastFreeWithdrawDate__c.field-meta.xml
<CustomField>
    <fullName>LastFreeWithdrawDate__c</fullName>
    <label>Data Ultimo ritiro gratuito</label>
    <type>Date</type>
</CustomField>