force-app/main/default/objects/FreeWithdraw__c/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <label>ServicePoint</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Ritiri Gratuiti</relationshipLabel>
    <relationshipName>Ritiri_Gratuiti</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>